API連携/discord_tips.log
[2026-04-02 06:10:05] === Discord Tips 投稿開始 ===
[2026-04-02 06:10:05] 今日のTips: #2
[2026-04-02 06:10:05] ✅ Tips #2 投稿完了
[2026-04-02 06:10:05] === 完了 ===
[2026-04-02 06:10:05] === Discord Tips 投稿開始 ===
[2026-04-02 06:10:05] 今日のTips: #2
✅ Discord投稿成功（167文字）
[2026-04-02 06:10:05] ✅ Tips #2 投稿完了
[2026-04-02 06:10:05] === 完了 ===
[2026-04-03 11:07:37] === Discord Tips 投稿開始 ===
[2026-04-03 11:07:37] 今日のTips: #3
[2026-04-03 11:07:38] ✅ Tips #3 投稿完了
[2026-04-03 11:07:38] === 完了 ===
[2026-04-04 09:08:33] === Discord Tips 投稿開始 ===
[2026-04-04 09:08:33] ❌ エラー発生: invalid character '💡' (U+1F4A1) (discord_tips_library.py, line 14)
[2026-04-04 09:08:33] Traceback (most recent call last):
  File "/Users/sanadahiroaki/Desktop/AI経営本部/API連携/discord_daily_tips.py", line 20, in <module>
    from discord_tips_library import get_today_tip
  File "/Users/sanadahiroaki/Desktop/AI経営本部/API連携/discord_tips_library.py", line 14
    """💡 **Claude活用Tips #2 ｜ 出力形式を指定すると使いやすくなる**
       ^
SyntaxError: invalid character '💡' (U+1F4A1)

[2026-04-04 09:14:48] === Discord Tips 投稿開始 ===
[2026-04-04 09:14:48] 今日のTips: #1
[2026-04-04 09:14:49] ✅ Tips #1 投稿完了
[2026-04-04 09:14:49] === 完了 ===
[2026-04-04 09:23:49] === Discord Tips 投稿開始 ===
[2026-04-04 09:23:49] 今日のTips: #4
[2026-04-04 09:23:49] ✅ Tips #4 投稿完了
[2026-04-04 09:23:49] === 完了 ===
[2026-04-04 09:52:55] === Discord Tips 投稿開始 ===
[2026-04-04 09:52:55] 今日のTips: #4
[2026-04-04 09:52:56] ✅ Tips #4 投稿完了
[2026-04-04 09:52:56] === 完了 ===
